# resol2mqtt

./: .dockerignore  Dockerfile  LICENSE.md  README.md  install  pyproject.toml  requirements.txt  resol2mqtt  resol2mqtt.conf.example  run
.forgejo/workflows/: docker-build.yml
.github/workflows/: ci.yml
src/resol2mqtt/: __main__.py
supervisor/: resol2mqtt.conf
systemd/: resol2mqtt.service
